--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <img src="./assets/images/movie-ranking.png" height="200"/>
     </ol>
     <hr/>
-    <a href="./public/about.html">About Me</a><a href="./public/contact.html">Contact Me</a>
+    <a href="./public/about.html">About Me</a>&nbsp;&nbsp;<a href="./public/contact.html">Contact Me</a>
 </body>
 </html>
 <!-- TODO 2: Add Your previous projects' HTML into the public folder -->
